# zed-godot-enhanced

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL_STEPS.md  LICENSE  MANUAL_INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TODO.md  extension.toml  test.gd
.github/workflows/: ci.yml
scripts/: debug_zed_extension.sh  install_to_zed.sh  setup_godot_integration.sh  test_local.sh  validate.sh  verify_installation.sh
src/: gdscript.rs
tests/fixtures/: test_gdscript.gd
